feat: 完成实训编排系统全量功能开发
本次提交实现了完整的实训编排与AI辅助教学系统，包含以下核心内容：
1. 新增多维度数据库实体与Mapper层，覆盖实训节点、学生进度、教师操作、评价结果等业务场景
2. 重构前后端API接口与数据模型，支持阶段化实训流程与节点级AI处理追踪
3. 新增教师端与学生端实训页面，包括监控仪表盘、考试管理、分组管理等功能模块
4. 集成AI引擎服务，支持多类型节点AI处理、回调认证与重试机制
5. 新增编排可视化编辑器组件，支持节点拖拽、配置校验与阶段管理
6. 优化参数校验逻辑，修复字符串判空bug，新增全局业务异常处理
7. 添加测试依赖与配置，支持属性化测试与单元测试
8. 更新依赖版本与环境配置，调整安全过滤器链逻辑